# kdtree-rust

./: .travis.yml  Cargo.toml  README.md
benches/: bench.rs
src/: bench.rs  bounds.rs  distance.rs  kdtree.rs  lib.rs  partition.rs  test_common.rs
src/kdtree/: bounds.rs  buffors.rs  distance.rs  mod.rs  partition.rs  test_common.rs
src/tests/: integration_tests.rs
tests/: integration_tests.rs
