[package]
name = "fux_kdtree"
version = "0.1.1"
authors = ["fulara <ntszar@gmail.com>"]
description = "K-dimensional tree implemented in Rust for fast NN querying."

[lib]
name = "kdtree"
path = "src//lib.rs"
bench = false

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
quickcheck = "0.3"
rand = "*"
bencher = "*"
